--- a/app/views/forms/housing/CBLaddress1-joint.html
+++ b/app/views/forms/housing/CBLaddress1-joint.html
@@ -51,7 +51,7 @@
           name: "add-address2-joint",
           fieldset: {
             legend: {
-              text: "Do you need to add another past address?",
+              text: "Do you need to add a past address?",
               isPageHeading: true,
               classes: "govuk-fieldset__legend--m"
             }
