--- a/app/views/forms/housing/CBLchild1.html
+++ b/app/views/forms/housing/CBLchild1.html
@@ -80,7 +80,7 @@
     <ul class="govuk-list govuk-list--bullet">
       <li>Edit child 1 details takes them back to the previous page</li>
       <li>Remove child 1 takes them back to the screen where they select if they have children living with them</li>
-      <li>Validation - <span class="govuk-error-message">Confirm need to add another child</span></li>
+      <li>Validation - <span class="govuk-error-message">Confirm if need to add another child</span> <span class="UR-tag red">CHANGED</span></li>
     </ul>
 </div>
 
