--- a/app/views/forms/housing/CBLconfirmation-email.html
+++ b/app/views/forms/housing/CBLconfirmation-email.html
@@ -79,7 +79,16 @@
     <p>Housing doesn't want a reference number here, they have their own reference number</p>
     <p>might to say they will receive information via MAIL</p>
 </div>
-
+<div class="IT-notes-box">
+  <h3 class="govuk-heading-s">IT notes:<span class="UR-tag amber">Email text to send</span></h3>
+  <ul class="govuk-list">
+    <li>Thank you for applying for council housing.</li>
+    <li>We’ll write to you within 21 days.</li>
+    <li>The letter will confirm your housing registration number and priority on the housing list.</li>
+    <li>We may contact you sooner if we need extra information.</li>
+    <li>Housing Services</li>
+  </ul>
+</div>
 {% endblock %}
 
 
