--- a/app/views/forms/housing/CBLcontact.html
+++ b/app/views/forms/housing/CBLcontact.html
@@ -34,7 +34,7 @@
           name: "other-add",
           value: data['other-add'],
           label: {
-            text: "Enter other address, including postcode"
+            text: "Enter other Enter address including postcode"
           }
         }) }}
         {% endset -%}
@@ -156,7 +156,7 @@
     <ul class="govuk-list govuk-list--bullet">
     <li>if no email was entered previously, could we remove the radio button on this page?</li>
     <li>new field to ask for another address if option selected - two buttons have wording changed</li>
-    <li>Validation: <span class="govuk-error-message">Confirm preferred contact</span> (if none selected) - <span class="govuk-error-message">Enter other address - Enter contact details</span> (for attorney textbox)</li>
+    <li>Validation: <span class="govuk-error-message">Confirm preferred way to contact you</span> (if none selected) <span class="UR-tag red">CHANGED</span><br> <span class="govuk-error-message">Enter other address - Enter contact details of advocate or power of attorney</span> (for attorney textbox) <span class="UR-tag red">CHANGED</span></li>
     </ul>
 </div>
 
