--- a/app/views/forms/housing/CBLcontact1.html
+++ b/app/views/forms/housing/CBLcontact1.html
@@ -34,7 +34,7 @@
           name: "other-add",
           value: data['other-add'],
           label: {
-            text: "Enter other address, including postcode"
+            text: "Enter other Enter address including postcode"
           }
         }) }}
         {% endset -%}
