--- a/app/views/forms/housing/CBLcurrent-address.html
+++ b/app/views/forms/housing/CBLcurrent-address.html
@@ -48,7 +48,7 @@
           classes: "govuk-!-width-two-thirds",
           value: data['type-other'],
           label: {
-            text: "Give Details"
+            text: "Give details about occupant type"
           }
         }) }}
         {% endset -%}
@@ -112,11 +112,11 @@
     </ul>
 </div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag amber">should be ok to code</span></h3>
+    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">OK to code</span></h3>
     <ul class="govuk-list govuk-list--bullet">
   <li>this is a new page</li>
   <li>display the address captured previously after homeless question </li>
-  <li>validation: <span class="govuk-error-message">Enter move in date / Confirm occupant type / Provide details about occupant type</span></li>
+  <li>validation: <span class="govuk-error-message">Enter move in date / Confirm occupant type / Give details about occupant type</span><span class="UR-tag red">CHANGED</span></li>
     </ul>
 </div>
 
