--- a/app/views/forms/housing/CBLcurrent.html
+++ b/app/views/forms/housing/CBLcurrent.html
@@ -100,7 +100,7 @@
       <li>we need at list one checked, and if open a text box, then it needs not to be empty</li>
       <li>Select at least one - Give details (for Other)</li>
       <li>word association added after housing in 2nd checkbox</li>
-      <li>validation: <span class="govuk-error-message">Select at least one- Give details of current living situation</span></li>
+      <li>validation: <span class="govuk-error-message">Select at least one living situation - Give details of other living situation</span> <span class="UR-tag red">CHANGED</span></li>
     </ul>
 </div>
 
