--- a/app/views/forms/housing/CBLend.html
+++ b/app/views/forms/housing/CBLend.html
@@ -16,6 +16,7 @@
           You're about to submit your application
       </h2>
     
+      <p class="govuk-!-font-weight-bold govuk-!-margin-top-5">On the next page you can download your application summary and save it. </p>
  
       {% from "warning-text/macro.njk" import govukWarningText %}
 
@@ -24,7 +25,7 @@
         iconFallbackText: "Warning"
       }) }}
 
-     <p class="govuk-!-font-weight-bold govuk-!-margin-bottom-9 govuk-!-margin-top-5">On the next page you can download your application summary and save it. </p>
+      <p class="govuk-!-margin-top-5">&nbsp;</p>
    
 
       {% from "button/macro.njk" import govukButton %}
