--- a/app/views/forms/housing/CBLinfo-housed.html
+++ b/app/views/forms/housing/CBLinfo-housed.html
@@ -55,7 +55,7 @@
     <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
     <ul class="govuk-list govuk-list--bullet">
       <li>if they say they live alone, they jump to the pregnancy question - if no, then they will go to the first screen to add person</li>
-      <li>Validation - <span class="govuk-error-message">Confirm if will live alone</span></li>
+      <li>Validation - <span class="govuk-error-message">Confirm if living alone</span> <span class="UR-tag red">CHANGED</span></li>
     </ul>
 </div>
 
