--- a/app/views/forms/housing/CBLlegal.html
+++ b/app/views/forms/housing/CBLlegal.html
@@ -131,9 +131,9 @@
 <div class="IT-notes-box">
   <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
     <ul class="govuk-list govuk-list--bullet">
-      <li>validation: <span class="govuk-error-message">Confirm if legal action taken for breaking tenancy agreement / Provide details of legal action</span></li>
-      <li>validation: <span class="govuk-error-message">Confirm if ASBO given  / Provide details of ASBO</span></li>
-      <li>validation: <span class="govuk-error-message">Confirm if on Sex Offenders register</span></li>
+      <li>validation: <span class="govuk-error-message">Confirm if legal action taken for breaking tenancy agreement / Give details of legal action</span> <span class="UR-tag red">CHANGED</span></li>
+      <li>validation: <span class="govuk-error-message">Confirm if ASBO given  / Give details of ASBO</span> <span class="UR-tag red">CHANGED</span></li>
+      <li>validation: <span class="govuk-error-message">Confirm if need to register with police under Sex Offenders Act</span> <span class="UR-tag red">CHANGED</span></li>
     </ul>
 </div>
 {% endblock %}
