--- a/app/views/forms/housing/CBLother-children.html
+++ b/app/views/forms/housing/CBLother-children.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-        Apply online for council housing 
+        Apply online for council housing <span class="UR-tag red">CHANGED</span>
       </h1>
       <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
       <form class="form" method="post">
@@ -21,7 +21,7 @@
         name: "other-children",
         fieldset: {
           legend: {
-            text: "Do you have a child who sometimes lives with you?",
+            text: "Do you have a child who sometimes lives with you overnight?",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--m"
           }
@@ -51,9 +51,9 @@
     </div>
 </div>
 <div class="IT-notes-box">
-    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag amber">should be ok to code but content of guidance will change slightly</span></h3>
+    <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">OK to code</span></h3>
     <ul class="govuk-list govuk-list--bullet">
-      <li>Validation - <span class="govuk-error-message">Confirm if have child sometime</span></li>
+      <li>Validation - <span class="govuk-error-message">Confirm if a child sometimes lives with you overnight? </span> <span class="UR-tag red">CHANGED</span></li>
       <li>if they say yes, then enter children one by one - with screen that ask if more to add yes / no </li>
       <li>if they say no, they jump to current address screen</li>
     </ul>
