--- a/app/views/forms/housing/CBLproperty-type.html
+++ b/app/views/forms/housing/CBLproperty-type.html
@@ -25,7 +25,7 @@
             name: "other-type",
             value: data['other-type'],
             label: {
-              text: "Give Details"
+              text: "Give details"
             }
           }) }}
           {% endset -%}
@@ -94,7 +94,7 @@
 <div class="IT-notes-box">
   <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
   <ul class="govuk-list govuk-list--bullet">
-    <li>validation: <span class="govuk-error-message">Select at least one type of property - Give details of property</span></li>
+    <li>validation: <span class="govuk-error-message">Select at least one type of property - Give details of other type of property</span> <span class="UR-tag red">CHANGED</span></li>
   </ul>
 </div>
 
