--- a/app/views/forms/housing/CBL5yearsadd-question.html
+++ b/app/views/forms/housing/CBL5yearsadd-question.html
@@ -64,7 +64,7 @@
 <div class="IT-notes-box">
     <h3 class="govuk-heading-s">IT notes: <span class="UR-tag ok">ok to code</span></h3>
     <ul class="govuk-list govuk-list--bullet">
-    <li>Validation: <span class="govuk-error-message">Confirm need to add past address</span></li>
+    <li>Validation: <span class="govuk-error-message">Confirm if need to add past address</span> <span class="UR-tag red">CHANGED</span></li>
     <li>if yes, goes to ask first previous address</li>
     <li>if no, then if there is no joint applicant, goes to the legal questions, if there is one then ask about same addresses for the joint or not</li>
     </ul>
