--- a/app/views/forms/housing/CBLadd-child1-loop.html
+++ b/app/views/forms/housing/CBLadd-child1-loop.html
@@ -129,7 +129,7 @@
 
       {{ govukInput({
         label: {
-          text: "Enter their address, including postcode"
+          text: "Enter their Enter address including postcode"
         },
         id: "child-add1",
         name: "child-add1",
