--- a/app/views/forms/housing/CBLaddress1.html
+++ b/app/views/forms/housing/CBLaddress1.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-        Apply online for council housing
+        Apply online for council housing <span class="UR-tag red">CHANGED</span>
       </h1>
       <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
       <h2 class="govuk-heading-m">
@@ -51,7 +51,7 @@
           name: "add-address2",
           fieldset: {
             legend: {
-              text: "Do you need to add another past address?",
+              text: "Do you need to add a past address?",
               isPageHeading: true,
               classes: "govuk-fieldset__legend--m"
             }
