--- a/app/views/forms/housing/CBLconfirmation.html
+++ b/app/views/forms/housing/CBLconfirmation.html
@@ -73,7 +73,7 @@
     </div>
 </div>
 <div class="alt-notes-box">
-<p><a href="/forms/housing/CBLconfirmation-email">see with an email</a> - - - <a href="/forms/housing/CBLconfirmation-post">see when we send by post</a></p>
+<p><a href="/forms/housing/CBLconfirmation-email">see with an email</a> - - - <a href="/forms/housing/CBLconfirmation-post">see when we send by post</a> - - - - <a href="/forms/housing/CBLemail-text">see text of email</a></p>
 </div>
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
@@ -81,6 +81,16 @@
     <p>could we prompt the user to fill in a medical priority application depending on what they selected in the form - send the pdf in the confirmation email maybe?</p>
     <p>Housing doesn't want a reference number here, they have their own reference number</p>
     <p>might to say they will receive information via MAIL</p>
+</div>
+<div class="IT-notes-box">
+  <h3 class="govuk-heading-s">IT notes:<span class="UR-tag amber">Email text to send</span></h3>
+  <ul class="govuk-list">
+    <li>Thank you for applying for council housing.</li>
+    <li>We’ll write to you within 21 days.</li>
+    <li>The letter will confirm your housing registration number and priority on the housing list.</li>
+    <li>We may contact you sooner if we need extra information.</li>
+    <li>Housing Services</li>
+  </ul>
 </div>
 
 {% endblock %}
