--- a/app/views/forms/housing/CBLhomeless-question.html
+++ b/app/views/forms/housing/CBLhomeless-question.html
@@ -56,7 +56,7 @@
 <div class="IT-notes-box">
   <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
     <ul class="govuk-list govuk-list--bullet">
-      <li>validation: <span class="govuk-error-message">Confirm homeless or at risk of being made homeless</span></li>
+      <li>validation: <span class="govuk-error-message">Confirm homeless or at risk</span> <span class="UR-tag red">CHANGED</span> </li>
       <li>yes goes to information screen and the stop you, no let you go through to current address question</li>
     </ul>
 </div>
