--- a/app/views/forms/housing/CBLhouse-type.html
+++ b/app/views/forms/housing/CBLhouse-type.html
@@ -115,6 +115,7 @@
     <h3 class="govuk-heading-s">IT notes: <span class="UR-tag ok">ok to code</span></h3>
     <p>text of checkbox  Sheltered housing changed + extra radio button for highest floor</p>
     <p>second question as a different wording and is not checkboxes instead of radio buttons</p>
+    <p>validation: <span class="govuk-error-message">Select at least one house type - Select at least one floor</span> </lp>
 </div>
 
 {% endblock %}
