--- a/app/views/forms/housing/CBLother-properties.html
+++ b/app/views/forms/housing/CBLother-properties.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-        Apply online for council housing
+        Apply online for council housing <span class="UR-tag red">CHANGED</span>
       </h1>
       <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
 {% from "radios/macro.njk" import govukRadios %}
@@ -22,7 +22,7 @@
   name: "properties-details",
   classes: "govuk-!-width-two-thirds",
   label: {
-    text: "Address, including postcode"
+    text: "Enter address including postcode"
   }
 }) }}
 {% endset -%}
@@ -70,7 +70,7 @@
 <div class="IT-notes-box">
     <h3 class="govuk-heading-s">IT notes:<span class="UR-tag ok">ok to code</span></h3>
     <p><strong> change of wording: "another property" instead of 'it'</strong></p>
-    <p>validation: <span class="govuk-error-message">Confirm if other properties</span></p>
+    <p>validation: <span class="govuk-error-message">Confirm if you rent or own another property</span> <span class="UR-tag red">CHANGED</span></p>
 </div>
 
 {% endblock %}
