simply equality questionnaire and add flow

--- a/app/views/forms/equal-opportunities/identity.html
+++ b/app/views/forms/equal-opportunities/identity.html
@@ -9,7 +9,7 @@ Identity - Equality and diversity
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-            Equality and diversity questionnaire
+            Equality and diversity questionnaire <span class="UR-tag red">NOT ASKED ON PAPER FORM</span>
         </h1>
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
 
@@ -79,7 +79,7 @@ Identity - Equality and diversity
         {{ govukButton({
           text: "Continue",
           classes: "button-primary",
-          href: "/forms/equal-opportunities/ethnic-origin.html"
+          href: "/forms/equal-opportunities/ethnic-origin-simple.html"
         }) }}
 
 
