--- a/app/views/forms/equal-opportunities/religion1.html
+++ b/app/views/forms/equal-opportunities/religion1.html
@@ -9,7 +9,7 @@ Religion - Equality and diversity
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
-            Equality and diversity questionnaire
+            Equality and diversity questionnaire <span class="UR-tag red">NOT ASKED ON PAPER FORM</span>
         </h1>
         <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
 
